<resources>
    <string name="app_name">Socialize</string>
    <string name="act_signup_text1a">S</string>
    <string name="act_signup_text1b">ocialize</string>
    <string name="act_signup_text2">Enter your details below</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="age">Age</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string name="gender">Gender</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="act_signup_text3">Password must contain atleast 6 characters</string>
    <string name="act_signup_symbol">*</string>
    <string name="or">or</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="redirect_to_signup">New here? Click here to create your account</string>
    <string name="redirect_to_login">Already have an account? Click here to log in</string>
    <string name="posts">Posts</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="liked">Liked</string>
    <string name="profile">Profile</string>
    <string name="upload_image">Upload Image</string>
    <string name="post_hint_text">What\'s on your mind?</string>
    <string name="posted_by">Posted by</string>
    <string name="posted_at">Posted at</string>
    <string name="like_count">COUNT</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="confirm_text">Are you sure you would like to delete your post?</string>
    <string name="confirm_text2">Are you sure you would like to delete your account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>


</resources>