<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/black"
    tools:context=".activities.SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text1a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font2"
            android:text="@string/act_signup_text1a"
            android:textColor="@color/buttonColor"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/cl"
            app:layout_constraintStart_toStartOf="@id/cl"
            app:layout_constraintTop_toTopOf="@id/cl"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text1b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_signup_text1b"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/text1a"
            app:layout_constraintTop_toTopOf="@id/text1a"
            app:layout_constraintBottom_toBottomOf="@id/text1a"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_signup_text2"
        android:textColor="@color/hintColor"
        android:textSize="16sp"
        android:fontFamily="@font/font2"
        app:layout_constraintTop_toBottomOf="@id/cl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="false"
        app:boxStrokeWidth="0.5dp"
        app:boxStrokeColor="@color/hintColor"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColorHint="@color/hintColor"
            android:textSize="14sp"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="false"
        app:boxStrokeWidth="0.5dp"
        app:boxStrokeColor="@color/hintColor"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/etNameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/hintColor"
            android:textSize="14sp"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="false"
        app:boxStrokeWidth="0.5dp"
        app:boxStrokeColor="@color/hintColor"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/text3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pass"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/hintColor"
            android:textSize="14sp"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etConfirmPassLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="false"
        app:boxStrokeWidth="0.5dp"
        app:boxStrokeColor="@color/hintColor"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/etPassLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_pass"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/hintColor"
            android:textSize="14sp"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:fontFamily="@font/font2"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/black"
        android:padding="15dp"
        app:cornerRadius="10dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPassLayout"/>

    <TextView
        android:id="@+id/symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_signup_symbol"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/etEmailLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_signup_text3"
        android:textColor="@color/hintColor"
        android:textSize="12sp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toTopOf="@id/symbol"
        app:layout_constraintBottom_toBottomOf="@id/symbol"
        app:layout_constraintStart_toEndOf="@id/symbol"/>

    <TextView
        android:id="@+id/tvRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redirect_to_login"
        android:textColor="@color/hintColor"
        android:textStyle="bold"
        android:textSize="14sp"
        android:fontFamily="@font/font2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>